Avoid clobbering state in viewport tag initialization.

The overriding logic for meta viewport and @viewport tags worked by clobbering
mutable state in a nonreversible way.  This doesn't work properly when meta viewport
support is turned on and off dynamically, which happens in devtools
device emulation.  Switch the logic to store the different values
separately and compute the final result at time of use.

BUG=604619

Review-Url: https://codereview.chromium.org/1930363002
Cr-Commit-Position: refs/heads/master@{#392554}

Former-commit-id: 899f1773bcbe08bce6c3e0e1238cae1b073b440a